...
                context: context,
                builder: (context) {
                  return AlertDialog(
                    title: const Text('Ops...'),
                    content: Text(
                      error.message,
                      key: const Key('ErrorMessage'),
                    ),
                    actions: [
                      TextButton(
                        key: const Key('OkButton'),
                        onPressed: () => Navigator.pop(context),
                        child: const Text(
                          'Ok',
                          key: Key('TextButton'),
                        ),
                      ),
...
